# katas

./: .gitignore  README  README.md  TECH
2013.52_redis_pubsub/: README
2013.52_redis_workers/: CMakeLists.txt  README  README.md  server.c  worker.god  worker.rb
2013.52_redis_workers/cmake_modules/: FindHiRedis.cmake
2014.01_fireworks/: CMakeLists.txt  README  README.md  gl.cc  gl.h  main.cc  utils.h
2014.01_fireworks/cmake_modules/: FindGLFW.cmake
2014.02_go_webcalc/: README.md  main.go
2014.03_rails_chat/: README.rdoc  Rakefile
2014.03_rails_chat/app/controllers/: messages_controller.rb
2014.03_rails_chat/app/views/layouts/: application.html.erb
2014.03_rails_chat/app/views/messages/: index.html.erb
2014.03_rails_chat/app/views/welcome/: index.html.erb
2014.03_rails_chat/config/: application.rb  environment.rb  routes.rb
2014.03_rails_chat/config/environments/: development.rb  production.rb  test.rb
2014.03_rails_chat/config/initializers/: secret_token.rb  session_store.rb
2014.03_rails_chat/db/: schema.rb
2014.03_rails_chat/db/migrate/: 20140130175146_create_messages.rb
2014.03_rails_chat/test/fixtures/: messages.yml
2014.04_erlang_chat/: README.md  client.erl  server.erl
2014.05_erlang_redis_workers/: README.md
2014.05_scala_servlets/: README.md
2014.05_scala_servlets/project/: build.scala
2014.05_scala_servlets/src/main/scala/: ScalatraBootstrap.scala
2014.06_erlang_redis_workers/: README.md
2014.XX_currency_rates/: Gemfile  README.md  rate_service.rb  update_database.rb
(+6 files in other folders)
